# rig-resources

./: AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  ROADMAP.md  justfile  release-plz.toml
.github/workflows/: ci.yml
examples/: graph_fixtures.rs  trace_envelopes.rs
src/: baseline.rs  lib.rs  memory.rs  patterns.rs  projection.rs  skills.rs  trace.rs
src/graph/: inmem.rs  mod.rs  skills.rs  store.rs  tool.rs
src/security/: credential.rs  ecs.rs  exfil.rs  finding.rs  lateral.rs  mod.rs  recon.rs
tests/: projection_provenance.rs
